# Flask_Platform

./: README.rst  setup.cfg  setup.py
docs/: conf.py
src/flask_platform/: skeleton.py
src/flask_platform/app/: __init__.py  views.py
src/flask_platform/app/templates/: index.html
tests/: test_skeleton.py
